MDEV-30671 innodb_undo_log_truncate=ON fails to wait for purge of transaction history

trx_purge_truncate_history(): Also check for trx_rseg_t::needs_purge
so that we will not prematurely discard undo records.

trx_purge_free_segment(), trx_purge_truncate_rseg_history():
Reset trx_rseg_t::needs_purge when everything has been removed.

This should avoid crashes during MVCC read, as well as failures to
purge transaction history, which would be caught by CHECK TABLE…EXTENDED
after commit ab0190101b0587e0e03b2d75a967050b9a85fd1b (MDEV-24402).

Stack traces for crashes during MVCC should include the following:

mem_heap_dup
trx_undo_rec_copy
trx_undo_get_undo_rec_low
trx_undo_get_undo_rec
trx_undo_prev_version_build

Also errors or crashes due to out-of-bounds access to an undo log page
are possible.